# hexagonal

./: CMakeLists.txt
src/: main.c
src/adapter/: display.c  display.h  keyboard.c  keyboard.h  udp_server.c  udp_server.h
src/domain/: input_base.h  output_base.h  typewriter.c  typewriter.h
